# turbo-spdx

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  Makefile  README.rst  azure-pipelines.yml  builder.py  requirements-dev.txt  setup.cfg
.github/workflows/: main.yaml
src/turbo_spdx/: spdx_23.py
src/turbo_spdx/model_23/: __init__.py
src/turbo_spdx/spdx_23/: __init__.py
src/turbo_spdx/spdx_2_2/: __init__.py
src/turbo_spdx/spdx_2_3/: __init__.py
tests/: test_model.py  test_roundtrip.py  test_spdx_23.py
tests/data/fixtures/2.3/: SPDXJSONExample-v2.3.spdx.json.ABOUT  asgiref-3.3.0.spdx.json  document_spdx_data.json  package_spdx_data.json  toml.spdx.json
tests/data/schema/2.3/: spdx-schema.json.ABOUT
