[metadata]
name = turbo-spdx
version = 2.0.0
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Fast and lightweight Python library for parsing and writing SPDX JSON documents correctly.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/turbo-spdx

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    spdx
    sbom
    utilities
    pydantic

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.8

install_requires =
    pydantic


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    datamodel-code-generator
    jsonschema
    docformatter
    twine
    black
    isort

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
